# Projeto-POO---RPG-Manager

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  rpg_save.db
arquivos-corrigidos/: batalha.c  classes.h  habilidade.h  inimigo.h  menu.h  persistencia.h  personagem.h
src/: batalha.h  classes.h  entidade.h  factories.h  fogueira.h  habilidade.h  inimigo.h  inventario.h  item.h  menu.h  persistencia.h  personagem.h  raca.h
tests/: CMakeLists.txt  test_rpg.cpp
